<resources>
    <string name="app_name">Weather</string>

    <!-- Strings related to Settings -->

    <!-- General settings -->
    <string name="pref_header_general">General settings</string>

    <string name="pref_title_use_local_time">Use local time instead of device time</string>
    <string name="pref_description_use_local_time">Use the time at the location of weather info instead of the time on the device
    </string>

    <string name="pref_title_use_dark_theme">Use dark theme</string>
    <string name="pref_description_use_dark_theme">Save your battery and use a dark theme instead of the default light theme</string>

    <string name="pref_title_time">Time preference</string>
    <string-array name="pref_time_list_titles">
        <item>24h (13:37)</item>
        <item>am/pm (1:37pm)</item>
    </string-array>
    <string-array name="pref_time_list_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="pref_title_temp_scale">Temperature scale</string>
    <string-array name="pref_temp_scale_list_titles">
        <item>Celsius</item>
        <item>Fahrenheit</item>
        <item>Kelvin</item>
    </string-array>
    <string-array name="pref_temp_scale_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="pref_title_rain_scale">Precipitation unit</string>
    <string-array name="pref_rain_scale_list_titles">
        <item>Millimeter</item>
        <item>Inch</item>
    </string-array>
    <string-array name="pref_rain_scale_list_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string name="location">Find a location</string>
    <string name="add_widget">Add widget</string>

    <string name="wind_n">N</string>
    <string name="wind_ne">NE</string>
    <string name="wind_nw">NW</string>
    <string name="wind_s">S</string>
    <string name="wind_se">SE</string>
    <string name="wind_sw">SW</string>
    <string name="wind_e">E</string>
    <string name="wind_w">W</string>
</resources>
