<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:key="use_local_time"
        android:summary="@string/pref_description_use_local_time"
        android:title="@string/pref_title_use_local_time" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_time_list_titles"
        android:entryValues="@array/pref_time_list_values"
        android:key="time"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_time" />

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_temp_scale_list_titles"
        android:entryValues="@array/pref_temp_scale_list_values"
        android:key="temp_scale"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_temp_scale" />

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_rain_scale_list_titles"
        android:entryValues="@array/pref_rain_scale_list_values"
        android:key="rain_scale"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_rain_scale" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="use_dark_theme"
        android:summary="@string/pref_description_use_dark_theme"
        android:title="@string/pref_title_use_dark_theme" />

</PreferenceScreen>
